--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "antd": "^3.4.5",
+    "isomorphic-fetch": "^2.2.1",
+    "js-cookie": "^2.2.0",
+    "lodash": "^4.17.10",
+    "lodash.omit": "^4.5.0",
     "mobx": "^4.2.0",
     "mobx-react": "^5.1.2",
     "prop-types": "^15.6.1",
